--- a/index.html
+++ b/index.html
@@ -36,15 +36,31 @@
 
     <!-- Hero Section -->
     <section id="home" class="hero">
-        <div class="container">
-            <div class="hero-content">
-                <h1>Gaurav Gupta</h1>
-                <p>Salesforce & Java Developer | Apex, Lightning | VS Code Extension Developer</p>
-                <div class="hero-buttons">
-                    <a href="#projects" class="btn btn-primary">View My Work</a>
-                    <a href="#blog" class="btn btn-secondary">Read My Blog</a>
+        <div class="container hero-container">
+            <div class="hero-image">
+                <div class="image-wrapper">
+                    <img src="data:image/svg+xml,%3Csvg xmlns='http://www.w3.org/2000/svg' viewBox='0 0 200 200'%3E%3Ccircle cx='100' cy='100' r='100' fill='%236366f1'/%3E%3Ctext x='50%25' y='50%25' text-anchor='middle' dy='.3em' fill='white' font-size='48'%3EGG%3C/text%3E%3C/svg%3E" alt="Gaurav Gupta" class="profile-image">
+                    <div class="image-glow"></div>
                 </div>
             </div>
+            <div class="hero-content">
+                <h1>Gaurav Gupta</h1>
+                <p class="tagline">Senior Software Engineer</p>
+                <p class="subtitle">Salesforce & Java Developer | Apex, Lightning | VS Code Extension Developer</p>
+                <div class="hero-meta">
+                    <span class="meta-item">💼 5+ Years Experience</span>
+                    <span class="meta-item">🌍 Noida, India</span>
+                    <span class="meta-item">🚀 Available for Opportunities</span>
+                </div>
+                <div class="hero-buttons">
+                    <a href="#projects" class="btn btn-primary">View My Work</a>
+                    <a href="#experience" class="btn btn-secondary">Experience</a>
+                </div>
+            </div>
+        </div>
+        <div class="hero-scroll">
+            <span>Scroll to explore</span>
+            <div class="scroll-arrow"></div>
         </div>
     </section>
 
@@ -77,7 +93,168 @@
         </div>
     </section>
 
-    <!-- Projects Section -->
+    <!-- Experience Section -->
+    <section id="experience" class="experience">
+        <div class="container">
+            <h2>Experience & Journey</h2>
+            <div class="experience-timeline">
+                <div class="timeline-item">
+                    <div class="timeline-marker"></div>
+                    <div class="timeline-content glass-effect">
+                        <h3>Senior Software Engineer</h3>
+                        <p class="company">ARCAD Software</p>
+                        <p class="duration">Dec 2025 - Present • 3 mos</p>
+                        <ul class="skills-list">
+                            <li>Java Development</li>
+                            <li>VS Code Extensions</li>
+                            <li>TypeScript & React</li>
+                            <li>AI/LLM Solutions</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="timeline-item">
+                    <div class="timeline-marker"></div>
+                    <div class="timeline-content glass-effect">
+                        <h3>Software Engineer</h3>
+                        <p class="company">ARCAD Software</p>
+                        <p class="duration">Jul 2023 - Dec 2025 • 2 yrs 6 mos</p>
+                        <ul class="skills-list">
+                            <li>Java Development</li>
+                            <li>GitHub/GitLab</li>
+                            <li>13+ Technical Skills</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="timeline-item">
+                    <div class="timeline-marker"></div>
+                    <div class="timeline-content glass-effect">
+                        <h3>Freelancer</h3>
+                        <p class="company">Freelancer.com</p>
+                        <p class="duration">Oct 2022 - Jun 2025 • 2 yrs 9 mos</p>
+                        <ul class="skills-list">
+                            <li>Salesforce Development</li>
+                            <li>Lightning Components</li>
+                            <li>Apex Programming</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="timeline-item">
+                    <div class="timeline-marker"></div>
+                    <div class="timeline-content glass-effect">
+                        <h3>Salesforce Developer</h3>
+                        <p class="company">Kloudrac Inc</p>
+                        <p class="duration">Apr 2020 - Oct 2020 • 7 mos</p>
+                        <ul class="skills-list">
+                            <li>Salesforce CRM</li>
+                            <li>Lightning Components</li>
+                            <li>SQL Development</li>
+                        </ul>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- Skills Section -->
+    <section id="skills" class="skills-section">
+        <div class="container">
+            <h2>Technical Skills</h2>
+            <div class="skills-grid">
+                <div class="skill-category glass-effect">
+                    <h3>Backend & Cloud</h3>
+                    <div class="skill-items">
+                        <div class="skill-item">
+                            <span class="skill-name">Salesforce</span>
+                            <div class="skill-bar">
+                                <div class="skill-progress" style="width: 95%"></div>
+                            </div>
+                        </div>
+                        <div class="skill-item">
+                            <span class="skill-name">Java</span>
+                            <div class="skill-bar">
+                                <div class="skill-progress" style="width: 90%"></div>
+                            </div>
+                        </div>
+                        <div class="skill-item">
+                            <span class="skill-name">Apex Programming</span>
+                            <div class="skill-bar">
+                                <div class="skill-progress" style="width: 92%"></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="skill-category glass-effect">
+                    <h3>Frontend & UI</h3>
+                    <div class="skill-items">
+                        <div class="skill-item">
+                            <span class="skill-name">TypeScript</span>
+                            <div class="skill-bar">
+                                <div class="skill-progress" style="width: 88%"></div>
+                            </div>
+                        </div>
+                        <div class="skill-item">
+                            <span class="skill-name">React</span>
+                            <div class="skill-bar">
+                                <div class="skill-progress" style="width: 85%"></div>
+                            </div>
+                        </div>
+                        <div class="skill-item">
+                            <span class="skill-name">Lightning Aura Components</span>
+                            <div class="skill-bar">
+                                <div class="skill-progress" style="width: 93%"></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="skill-category glass-effect">
+                    <h3>DevOps & Tools</h3>
+                    <div class="skill-items">
+                        <div class="skill-item">
+                            <span class="skill-name">GitHub/GitLab</span>
+                            <div class="skill-bar">
+                                <div class="skill-progress" style="width: 90%"></div>
+                            </div>
+                        </div>
+                        <div class="skill-item">
+                            <span class="skill-name">VS Code Extensions</span>
+                            <div class="skill-bar">
+                                <div class="skill-progress" style="width: 87%"></div>
+                            </div>
+                        </div>
+                        <div class="skill-item">
+                            <span class="skill-name">AI/LLM Integration</span>
+                            <div class="skill-bar">
+                                <div class="skill-progress" style="width: 80%"></div>
+                            </div>
+                        </div>
+                    </div>
+                </div>
+
+                <div class="skill-category glass-effect">
+                    <h3>Certifications & Qualifications</h3>
+                    <div class="certifications">
+                        <div class="cert-item">
+                            <i class="fas fa-certificate"></i>
+                            <span>MCA - Information Technology</span>
+                            <p>Institute of Management Studies, Ghaziabad (2018-2020)</p>
+                        </div>
+                        <div class="cert-item">
+                            <i class="fas fa-certificate"></i>
+                            <span>Copado Administrator & Developer</span>
+                            <p>Certified Professional</p>
+                        </div>
+                        <div class="cert-item">
+                            <i class="fas fa-certificate"></i>
+                            <span>BCA - Information Technology</span>
+                            <p>Invertis University (2015-2018)</p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
     <section id="projects" class="projects">
         <div class="container">
             <h2>My Projects</h2>
