Add Salesforce Trailblazer profile section with achievements and stats

--- a/index.html
+++ b/index.html
@@ -76,6 +76,29 @@
                         I'm proficient in DevOps practices and version control (GitHub/GitLab), with hands-on experience in AI/LLM solutions and chatbot development.
                     </p>
                 </div>
+                <div class="trailblazer-section">
+                    <a href="https://www.salesforce.com/trailblazer/ggupta56" class="trailblazer-link" target="_blank">
+                        <div class="trailblazer-badge">
+                            <span class="badge-icon">🏆</span>
+                            <span class="badge-text">Salesforce Trailhead</span>
+                        </div>
+                        <div class="trailblazer-stats">
+                            <div class="stat">
+                                <span class="stat-value">213</span>
+                                <span class="stat-label">Badges</span>
+                            </div>
+                            <div class="stat">
+                                <span class="stat-value">83,875</span>
+                                <span class="stat-label">Points</span>
+                            </div>
+                            <div class="stat">
+                                <span class="stat-value">25</span>
+                                <span class="stat-label">Trails</span>
+                            </div>
+                        </div>
+                        <span class="view-profile">View Trailblazer Profile →</span>
+                    </a>
+                </div>
                 <div class="hero-buttons">
                     <a href="#projects" class="btn btn-primary">View My Work</a>
                     <a href="#experience" class="btn btn-secondary">Experience</a>
