Add complete work experience timeline: C&S ELECTRIC, Delhivery, Kcloud Technologies, and internship

--- a/index.html
+++ b/index.html
@@ -192,9 +192,52 @@
                         <p class="company">Kloudrac Inc</p>
                         <p class="duration">Apr 2020 - Oct 2020 • 7 mos</p>
                         <ul class="skills-list">
-                            <li>Salesforce CRM</li>
-                            <li>Lightning Components</li>
-                            <li>SQL Development</li>
+                            <li>GitHub</li>
+                            <li>Lightning</li>
+                            <li>Salesforce as a Service (SaaS)</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="timeline-item">
+                    <div class="timeline-marker"></div>
+                    <div class="timeline-content glass-effect">
+                        <h3>Salesforce Consultant</h3>
+                        <p class="company">C&S ELECTRIC LTD</p>
+                        <p class="duration">Oct 2020 - Sep 2021 • 1 yr</p>
+                        <ul class="skills-list">
+                            <li>GitHub</li>
+                            <li>Salesforce.com</li>
+                            <li>Lightning</li>
+                            <li>Cloud Applications</li>
+                            <li>Apex Programming</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="timeline-item">
+                    <div class="timeline-marker"></div>
+                    <div class="timeline-content glass-effect">
+                        <h3>Salesforce Consultant</h3>
+                        <p class="company">Delhivery</p>
+                        <p class="duration">Nov 2021 - Jul 2022 • 9 mos</p>
+                        <ul class="skills-list">
+                            <li>Project Management</li>
+                            <li>Salesforce.com</li>
+                            <li>Lightning</li>
+                            <li>Salesforce Administration</li>
+                            <li>Salesforce Sales Cloud</li>
+                        </ul>
+                    </div>
+                </div>
+                <div class="timeline-item">
+                    <div class="timeline-marker"></div>
+                    <div class="timeline-content glass-effect">
+                        <h3>Intern - Salesforce</h3>
+                        <p class="company">Kcloud Technologies - World of Salesforce Cloud</p>
+                        <p class="duration">Jan 2020 - Apr 2020 • 4 mos</p>
+                        <ul class="skills-list">
+                            <li>Salesforce</li>
+                            <li>CRM</li>
+                            <li>Customer Relationship Management</li>
                         </ul>
                     </div>
                 </div>
