Add comprehensive certifications section with 10 professional certifications and licenses

--- a/index.html
+++ b/index.html
@@ -17,7 +17,9 @@
             <ul class="nav-menu">
                 <li><a href="#home">Home</a></li>
                 <li><a href="#about">About</a></li>
+                <li><a href="#experience">Experience</a></li>
                 <li><a href="#projects">Projects</a></li>
+                <li><a href="#certifications">Certifications</a></li>
                 <li><a href="#blog">Blog</a></li>
                 <li><a href="#contact">Contact</a></li>
                 <li>
@@ -362,9 +364,98 @@
                 <!-- Blog posts will be loaded here -->
             </div>
         </div>
+    <!-- Certifications Section -->
+    <section id="certifications" class="certifications-section">
+        <div class="container">
+            <h2>Licenses & Certifications</h2>
+            <div class="certifications-list">
+                <div class="certification-card glass-effect">
+                    <div class="certification-header">
+                        <h3>Dive Deeper into GA4 Data and Reports</h3>
+                        <span class="issuer">Skillshop</span>
+                    </div>
+                    <p class="cert-date">Issued Sep 2025 • Expires Sep 2026</p>
+                    <p class="cert-id">Credential ID: 161356851</p>
+                </div>
+
+                <div class="certification-card glass-effect">
+                    <div class="certification-header">
+                        <h3>Oracle Cloud Infrastructure 2025 AI Foundations Associate</h3>
+                        <span class="issuer">Oracle</span>
+                    </div>
+                    <p class="cert-date">Issued Sep 2025</p>
+                </div>
+
+                <div class="certification-card glass-effect">
+                    <div class="certification-header">
+                        <h3>Oracle Cloud Infrastructure 2025 Data Science Professional</h3>
+                        <span class="issuer">Oracle</span>
+                    </div>
+                    <p class="cert-date">Issued Sep 2025</p>
+                </div>
+
+                <div class="certification-card glass-effect">
+                    <div class="certification-header">
+                        <h3>IBM i Ready</h3>
+                        <span class="issuer">IBM</span>
+                    </div>
+                    <p class="cert-date">Issued Sep 2025</p>
+                </div>
+
+                <div class="certification-card glass-effect">
+                    <div class="certification-header">
+                        <h3>Build Smarter AI with Embeddings</h3>
+                        <span class="issuer">IBM</span>
+                    </div>
+                    <p class="cert-date">Issued Sep 2025</p>
+                </div>
+
+                <div class="certification-card glass-effect">
+                    <div class="certification-header">
+                        <h3>Artificial Intelligence Fundamentals</h3>
+                        <span class="issuer">IBM</span>
+                    </div>
+                    <p class="cert-date">Issued Sep 2025</p>
+                </div>
+
+                <div class="certification-card glass-effect">
+                    <div class="certification-header">
+                        <h3>Journey to Cloud: Envisioning Your Solution</h3>
+                        <span class="issuer">IBM</span>
+                    </div>
+                    <p class="cert-date">Issued Sep 2025</p>
+                </div>
+
+                <div class="certification-card glass-effect">
+                    <div class="certification-header">
+                        <h3>Copado Certified Developer</h3>
+                        <span class="issuer">Copado</span>
+                    </div>
+                    <p class="cert-date">Issued Apr 2021 • Expired Apr 2021</p>
+                    <p class="cert-id">Credential ID: 012787</p>
+                </div>
+
+                <div class="certification-card glass-effect">
+                    <div class="certification-header">
+                        <h3>Copado Certified Administrator</h3>
+                        <span class="issuer">Copado</span>
+                    </div>
+                    <p class="cert-date">Issued Apr 2021 • Expired Apr 2021</p>
+                    <p class="cert-id">Credential ID: 012784</p>
+                </div>
+
+                <div class="certification-card glass-effect">
+                    <div class="certification-header">
+                        <h3>CCC (Course on Computer Concepts)</h3>
+                        <span class="issuer">NIELIT-India</span>
+                    </div>
+                    <p class="cert-date">Issued Mar 2016 • Expires Jan 2027</p>
+                </div>
+            </div>
+        </div>
     </section>
 
-    <!-- Contact Section -->
+    
     <section id="contact" class="contact">
         <div class="container">
             <h2>Get In Touch</h2>
