Add Team/Owner section with professional styling and responsive design

--- a/index.html
+++ b/index.html
@@ -20,6 +20,7 @@
                 <li><a href="#experience">Experience</a></li>
                 <li><a href="#projects">Projects</a></li>
                 <li><a href="#certifications">Certifications</a></li>
+                <li><a href="#team">Team</a></li>
                 <li><a href="#blog">Blog</a></li>
                 <li><a href="#contact">Contact</a></li>
                 <li>
@@ -455,7 +456,40 @@
         </div>
     </section>
 
-    
+    <!-- Team Section -->
+    <section id="team" class="team-section">
+        <div class="container">
+            <h2>Team</h2>
+            <div class="team-grid">
+                <div class="team-card glass-effect">
+                    <div class="team-image">
+                        <img src="images/gaurav-profile.jpg" alt="Gaurav Gupta" class="profile-img">
+                    </div>
+                    <div class="team-info">
+                        <h3>Gaurav Gupta</h3>
+                        <p class="team-role">Founder & Lead Developer</p>
+                        <p class="team-bio">
+                            Senior Software Engineer with 5+ years of expertise in Salesforce development, Java, 
+                            and modern web technologies. Salesforce Trailhead All Star Ranger with passion for 
+                            building scalable solutions and mentoring others.
+                        </p>
+                        <div class="team-links">
+                            <a href="https://www.linkedin.com/in/gauravgupta865" target="_blank" title="LinkedIn">
+                                <i class="fab fa-linkedin"></i>
+                            </a>
+                            <a href="https://github.com/gauravgupta0612" target="_blank" title="GitHub">
+                                <i class="fab fa-github"></i>
+                            </a>
+                            <a href="https://www.salesforce.com/trailblazer/ggupta56" target="_blank" title="Salesforce Trailhead">
+                                <i class="fas fa-star"></i>
+                            </a>
+                        </div>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
     <section id="contact" class="contact">
         <div class="container">
             <h2>Get In Touch</h2>
