Update Team section to use image from media folder

--- a/index.html
+++ b/index.html
@@ -463,7 +463,7 @@
             <div class="team-grid">
                 <div class="team-card glass-effect">
                     <div class="team-image">
-                        <img src="images/gaurav-profile.jpg" alt="Gaurav Gupta" class="profile-img">
+                        <img src="media/image (1).png" alt="Gaurav Gupta" class="profile-img">
                     </div>
                     <div class="team-info">
                         <h3>Gaurav Gupta</h3>
