Add visitor counter to footer with responsive styling

--- a/index.html
+++ b/index.html
@@ -517,7 +517,13 @@
     <!-- Footer -->
     <footer class="footer">
         <div class="container">
-            <p>&copy; 2026 Gaurav Gupta. All rights reserved.</p>
+            <div class="footer-content">
+                <p>&copy; 2026 Gaurav Gupta. All rights reserved.</p>
+                <div class="visitor-counter">
+                    <p>Visitors:</p>
+                    <img src="https://visitor-badge.laobi.icu/badge?page_id=gauravgupta0612.gaurav-portfolio" alt="Visitor Badge" />
+                </div>
+            </div>
         </div>
     </footer>
 
