Add address location to footer with improved styling

--- a/index.html
+++ b/index.html
@@ -518,10 +518,20 @@
     <footer class="footer">
         <div class="container">
             <div class="footer-content">
-                <p>&copy; 2026 Gaurav Gupta. All rights reserved.</p>
-                <div class="visitor-counter">
-                    <p>Visitors:</p>
-                    <img src="https://visitor-badge.laobi.icu/badge?page_id=gauravgupta0612.gaurav-portfolio" alt="Visitor Badge" />
+                <div class="footer-section">
+                    <p>&copy; 2026 Gaurav Gupta. All rights reserved.</p>
+                </div>
+                <div class="footer-section address-section">
+                    <p>
+                        <i class="fas fa-map-marker-alt"></i>
+                        Lucknow, Uttar Pradesh 226016
+                    </p>
+                </div>
+                <div class="footer-section">
+                    <div class="visitor-counter">
+                        <p>Visitors:</p>
+                        <img src="https://visitor-badge.laobi.icu/badge?page_id=gauravgupta0612.gaurav-portfolio" alt="Visitor Badge" />
+                    </div>
                 </div>
             </div>
         </div>
