--- a/index.html
+++ b/index.html
@@ -12,6 +12,21 @@
     <nav class="navbar">
         <div class="container">
             <div class="nav-brand">
+                <!-- SVG Logo -->
+                <svg class="logo-svg" viewBox="0 0 60 60" xmlns="http://www.w3.org/2000/svg">
+                    <defs>
+                        <linearGradient id="logoGradient" x1="0%" y1="0%" x2="100%" y2="100%">
+                            <stop offset="0%" style="stop-color:#6366f1;stop-opacity:1" />
+                            <stop offset="100%" style="stop-color:#8b5cf6;stop-opacity:1" />
+                        </linearGradient>
+                    </defs>
+                    <!-- Background Circle -->
+                    <circle cx="30" cy="30" r="28" fill="url(#logoGradient)" opacity="0.9"/>
+                    <!-- Border Circle -->
+                    <circle cx="30" cy="30" r="28" fill="none" stroke="white" stroke-width="2" opacity="0.3"/>
+                    <!-- GG Text -->
+                    <text x="30" y="38" font-size="24" font-weight="bold" fill="white" text-anchor="middle" font-family="Arial, sans-serif">GG</text>
+                </svg>
                 <h1>Gaurav Gupta</h1>
             </div>
             <ul class="nav-menu">
