--- a/index.html
+++ b/index.html
@@ -19,13 +19,20 @@
                             <stop offset="0%" style="stop-color:#6366f1;stop-opacity:1" />
                             <stop offset="100%" style="stop-color:#8b5cf6;stop-opacity:1" />
                         </linearGradient>
+                        <filter id="logoGlow">
+                            <feGaussianBlur stdDeviation="2" result="coloredBlur"/>
+                            <feMerge>
+                                <feMergeNode in="coloredBlur"/>
+                                <feMergeNode in="SourceGraphic"/>
+                            </feMerge>
+                        </filter>
                     </defs>
                     <!-- Background Circle -->
-                    <circle cx="30" cy="30" r="28" fill="url(#logoGradient)" opacity="0.9"/>
-                    <!-- Border Circle -->
-                    <circle cx="30" cy="30" r="28" fill="none" stroke="white" stroke-width="2" opacity="0.3"/>
-                    <!-- GG Text -->
-                    <text x="30" y="37" font-size="20" font-weight="bold" fill="white" text-anchor="middle" font-family="Arial, sans-serif">GG</text>
+                    <circle cx="30" cy="30" r="28" fill="url(#logoGradient)" opacity="0.95"/>
+                    <!-- Border Circle with glow -->
+                    <circle cx="30" cy="30" r="28" fill="none" stroke="white" stroke-width="1.5" opacity="0.4" filter="url(#logoGlow)"/>
+                    <!-- GG Text - Stylish -->
+                    <text x="30" y="39" font-size="22" font-weight="900" fill="white" text-anchor="middle" font-family="'Courier New', 'Monaco', monospace" letter-spacing="0.5" filter="url(#logoGlow)">GG</text>
                 </svg>
                 <h1>Gaurav Gupta</h1>
             </div>
