Add community Q&A forum and meeting scheduler pages
- New community.html: Full Q&A forum with question posting and replies
- New meetings.html: Meeting booking system with calendar and availability
- css/community.css: Styling for community forum
- css/meetings.css: Styling for meeting scheduler
- js/community.js: Community forum functionality with localStorage
- js/meetings.js: Meeting scheduler with date/time validation
- Procfile: Railway.app deployment configuration
- package.json: Updated with engines specification
- index.html: Added navigation links to Community and Meetings pages

All data stored in localStorage for persistence.

--- a/index.html
+++ b/index.html
@@ -43,6 +43,8 @@
                 <li><a href="#projects">Projects</a></li>
                 <li><a href="#certifications">Certifications</a></li>
                 <li><a href="#team">Team</a></li>
+                <li><a href="meetings.html">Meetings</a></li>
+                <li><a href="community.html">Community</a></li>
                 <li><a href="#blog">Blog</a></li>
                 <li><a href="#contact">Contact</a></li>
                 <li>
